apps/monitoring-stack/ingressroute-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-route
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`prometheus.local.khider.fr`)
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: prometheus-cert
